<resources>
    <string name="app_name">SupFitness Training</string>

    <string name="title_weight">Poids</string>
    <string name="title_statistics">Suivi du poids</string>
    <string name="title_training">Entrainement</string>

    <string name="stat_7_days">7 jours glissants</string>
    <string name="stat_30_days">30 jours glissants</string>
    <string name="stat_90_days">90 jours glissants</string>
    <string name="stat_total">Moyenne de vos poids</string>

    <string name="settings_title">Mes préférences</string>
    <string name="settings_notif">Rappel de pesée</string>

    <string name="training_start_instruction">Pour commencer un nouvel entrainement, échauffez-vous puis appuyer sur le bouton start ci-dessous</string>
    <string name="training_list">Mes entrainements</string>
    <string name="title_activity_training">TrainingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>