<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_weight">

    <fragment
        android:id="@+id/navigation_weight"
        android:name="fr.tanguy.supfitness.ui.weight.WeightFragment"
        android:label="@string/title_weight"
        tools:layout="@layout/fragment_weight" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="fr.tanguy.supfitness.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_training"
        android:name="fr.tanguy.supfitness.ui.training.TrainingFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_training" />
</navigation>