<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".ui.statistics.StatisticsFragment">

    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/graph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="300dp"
        android:background="@color/white"
        android:elevation="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--  #####################################################  -->
    <!--  #####################  CARD 01  #####################  -->
    <!--  #####################################################  -->

    <View
        android:id="@+id/rectViewCard1"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/statistics_stats_background"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graph"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/titleCard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard1"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard1"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard1"
        app:layout_constraintTop_toTopOf="@+id/rectViewCard1"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/subtitleCard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_7_days"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard1"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard1"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard1"
        app:layout_constraintTop_toBottomOf="@+id/titleCard1"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="SmallSp" />

    <!--  #####################################################  -->
    <!--  #####################################################  -->


    <!--  #####################################################  -->
    <!--  #####################  CARD 02  #####################  -->
    <!--  #####################################################  -->

    <View
        android:id="@+id/rectViewCard2"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:background="@drawable/statistics_stats_background"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rectViewCard1"
        app:layout_constraintTop_toBottomOf="@+id/graph"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/titleCard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard2"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard2"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard2"
        app:layout_constraintTop_toTopOf="@+id/rectViewCard2"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/subtitleCard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_30_days"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard2"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard2"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard2"
        app:layout_constraintTop_toBottomOf="@+id/titleCard2"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="SmallSp" />

    <!--  #####################################################  -->
    <!--  #####################################################  -->




    <!--  #####################################################  -->
    <!--  #####################  CARD 03  #####################  -->
    <!--  #####################################################  -->

    <View
        android:id="@+id/rectViewCard3"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/statistics_stats_background"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectViewCard1"
        app:layout_constraintVertical_bias="0.09" />

    <TextView
        android:id="@+id/titleCard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard3"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard3"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard3"
        app:layout_constraintTop_toTopOf="@+id/rectViewCard3"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/subtitleCard3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_90_days"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard3"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard3"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard3"
        app:layout_constraintTop_toBottomOf="@+id/titleCard3"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="SmallSp" />

    <!--  #####################################################  -->
    <!--  #####################################################  -->



    <!--  #####################################################  -->
    <!--  #####################  CARD 04  #####################  -->
    <!--  #####################################################  -->

    <View
        android:id="@+id/rectViewCard4"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:background="@drawable/statistics_stats_background"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toEndOf="@+id/rectViewCard3"
        app:layout_constraintTop_toBottomOf="@+id/subtitleCard2"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/titleCard4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_blue"
        android:textSize="25sp"
        android:textStyle="bold"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard4"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard4"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard4"
        app:layout_constraintTop_toTopOf="@+id/rectViewCard4"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/subtitleCard4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stat_total"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:translationZ="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/rectViewCard4"
        app:layout_constraintEnd_toEndOf="@+id/rectViewCard4"
        app:layout_constraintStart_toStartOf="@+id/rectViewCard4"
        app:layout_constraintTop_toBottomOf="@+id/titleCard4"
        app:layout_constraintVertical_bias="0.703"
        tools:ignore="SmallSp" />

    <!--  #####################################################  -->
    <!--  #####################################################  -->


</androidx.constraintlayout.widget.ConstraintLayout>